Added an image to the recipe page

--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>Homemade Mac n Cheese</h1>
+        <img src="./img/macncheese" alt="Cooked macncheese">   
     </body>
 </html>
