resized the recipe img

--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <h1>Homemade Mac n Cheese</h1>
-        <img src="../img/macncheese.jpg" alt="Cooked macncheese">   
+        <img src="../img/macncheese.jpg" alt="Cooked macncheese" width="900" height="800">   
     </body>
 </html>
