Added description and ingredient list

--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -6,6 +6,17 @@
     </head>
     <body>
         <h1>Homemade Mac n Cheese</h1>
-        <img src="../img/macncheese.jpg" alt="Cooked macncheese" width="900" height="800">   
+        <img src="../img/macncheese.jpg" alt="Cooked macncheese" width="400" height="400"> 
+            <h2>Description</h2> 
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima magnam maxime libero porro aperiam quae non doloribus, perferendis velit nostrum! Quasi inventore, recusandae quam delectus consequuntur ex modi perferendis labore.</p> 
+        <h3>Ingredients</h3>
+            <ul>
+                <li>Macaroni</li>
+                <li>Butter and Flour</li>
+                <li>Milk</li>
+                <li>Seasoning</li>
+                <li>Bread crumbs</li>
+
+            </ul>
     </body>
 </html>
