--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -18,5 +18,11 @@
                 <li>Bread crumbs</li>
 
             </ul>
+            <ol>
+                <li>Boil the noodles, drain, and transfer to a prepared baking dish</li>
+                <li>Make the cheese sauce, pour the source over the noodles</li>
+                <li>Make the topping, spread it over macaroni and cheese, and sprinkle with paprika</li>
+                <li>bake the mac and cheese until the topping is golden brown</li>
+            </ol>
     </body>
 </html>
