--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/macncheese.html"> Homemade Mac n Cheese</a>
+        <ul>
+            <li><a href="recipes/macncheese.html"> Homemade Mac n Cheese</a></li>
+        </ul>
     </body>
 
 </html>
