Added an ingredient list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/macncheese.html"> Homemade Mac n Cheese</a></li>
-            <li><a href="recipes/roastbeef.html">Roastbeef and Cheddar Slidders</a>/li>
+            <li><a href="recipes/roastbeef.html">Roastbeef and Cheddar Slidders</a></li>
         </ul>
     </body>
 
