--- a/recipes/roastbeef.html
+++ b/recipes/roastbeef.html
@@ -7,5 +7,18 @@
     <body>
         <h1>Roast beef and Cheddar Slidders</h1>
         <img src="../img/roast.webp" alt="Cooked roast beef" width="400" height="400">
+        <h2>Description</h2>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt laudantium, maiores nisi quas voluptate minima fugiat ducimus! Tempore ipsa fugiat voluptatibus nam, dolore cum possimus placeat impedit minus quibusdam modi!</p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>4 tablespoons butter, melted, divided</li>
+            <li>1 (12 roll) package Hawaiianb rolls split in half horizontally</li>
+            <li>12 ounce deli roast beef</li>
+            <li>1/2 cup thin tangy BBQ sauce</li>
+            <li>1 cup Cheddar cheese sauce</li>
+            <li>1/4 garlic powder</li>
+            <li>1/4 teaspoons onion powder</li>
+            <li>2 teaspoon everything bagel seasoning</li>
+        </ul>
     </body>
 </html>
