Added missing steps

--- a/recipes/macncheese.html
+++ b/recipes/macncheese.html
@@ -18,6 +18,7 @@
                 <li>Bread crumbs</li>
 
             </ul>
+        <h3>Steps</h3>
             <ol>
                 <li>Boil the noodles, drain, and transfer to a prepared baking dish</li>
                 <li>Make the cheese sauce, pour the source over the noodles</li>
