Added steps to recipes

--- a/recipes/roastbeef.html
+++ b/recipes/roastbeef.html
@@ -8,9 +8,9 @@
         <h1>Roast beef and Cheddar Slidders</h1>
         <img src="../img/roast.webp" alt="Cooked roast beef" width="400" height="400">
         <h2>Description</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt laudantium, maiores nisi quas voluptate minima fugiat ducimus! Tempore ipsa fugiat voluptatibus nam, dolore cum possimus placeat impedit minus quibusdam modi!</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt laudantium, maiores nisi quas voluptate minima fugiat ducimus! Tempore ipsa fugiat voluptatibus nam, dolore cum possimus placeat impedit minus quibusdam modi!</p>
         <h3>Ingredients</h3>
-        <ul>
+         <ul>
             <li>4 tablespoons butter, melted, divided</li>
             <li>1 (12 roll) package Hawaiianb rolls split in half horizontally</li>
             <li>12 ounce deli roast beef</li>
@@ -20,5 +20,12 @@
             <li>1/4 teaspoons onion powder</li>
             <li>2 teaspoon everything bagel seasoning</li>
         </ul>
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 350 degrees F (175 degrees C). Brush the bottom and sides of a 9x13-inch baking dish with melted butter until lightly coated. </li>
+            <li>Place bottom half of rolls in baking dish and top evenly with roast beef slices. Drizzle BBQ sauce evenly over roast beef and dollop cheese sauce evenly over the top. Place top roll halves on top. </li>
+            <li>Stir together remaining butter, garlic powder, and onion powder and brush evenly over bun tops.  Sprinkle with bagel seasoning. </li>
+            <li>Bake in the preheated oven until the center is warm and melted, and bread is toasted and golden brown, 12 to 14 minutes. </li>
+        </ol>
     </body>
 </html>
